[package]
name = "rowan-tools"
description = "A few helpers for writing hand-written parsers"
version = "0.1.0"
authors = ["jD91mZM2 <me@krake.one>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/jD91mZM2/rowan-tools"
readme = "README.md"
keywords = ["rowan", "lexer", "parser"]
categories = ["parsing"]

[dependencies]
rowan = "0.6.2"
